--- a/src/image-slider-img.css
+++ b/src/image-slider-img.css
@@ -11,7 +11,6 @@
   display: block;
   flex-shrink: 0;
   flex-grow: 0;
-  transition: translate 300ms ease-in-out;
 }
 
 .img-slider-btn {
@@ -24,11 +23,9 @@
   cursor: pointer;
   transition: background-color 100ms ease-in-out;
 }
-.img-slider-btn:hover {
+.img-slider-btn:hover,
+.img-slider-btn:focus-visible {
   background-color: rgb(0, 0, 0, 0.2);
-}
-.img-slider-btn:hover > * {
-  animation: squish 200ms ease-in-out;
 }
 
 .img-slider-btn > * {
@@ -37,9 +34,70 @@
   width: 2rem;
   height: 2rem;
 }
-  
+
 @keyframes squish {
   50% {
     scale: 1.4 0.6;
+  }
+}
+
+.img-slider-dot-btn {
+  all: unset;
+  display: block;
+  cursor: pointer;
+  width: 1rem;
+  height: 1rem;
+  transition: scale 100ms ease-in-out;
+}
+
+.img-slider-dot-btn:hover,
+.img-slider-dot-btn:focus-visible {
+  scale: 1.2;
+}
+
+.img-slider-dot-btn > * {
+  stroke: white;
+  fill: black;
+  height: 100%;
+  width: 100%;
+}
+
+.img-slider-dot-btn:focus-visible,
+.img-slider-btn:focus-visible {
+  outline: auto;
+}
+
+.skip-link {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  padding: 0;
+  margin: -1px;
+  overflow: hidden;
+  border: 0;
+  clip: rect(0, 0, 0, 0);
+}
+.skip-link:focus-visible {
+  top: 0;
+  left: 0;
+  border: 1pz solid black;
+  background-color: wheat;
+  padding: 0.5rem;
+  width: auto;
+  height: auto;
+  margin: 0;
+  clip: unset;
+  text-decoration: none;
+  color: black;
+  z-index: 100;
+}
+
+@media not (prefers-reduced-motion) {
+  .image-slider-img {
+    transition: translate 300ms ease-in-out;
+  }
+  .img-slider-btn:hover > *,
+  .img-slider-btn:focus-visible > * {
+    animation: squish 200ms ease-in-out;
   }
 }
